--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/framework-bundle": "~2.3",
-        "symfony/twig-bundle": "~2.3"
+        "symfony/twig-bundle": "~2.3",
+        "white-october/pagerfanta-bundle": "1.0.*"
     },
     "require-dev": {
         "doctrine/orm": "~2.3",
